Part1/project/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-node
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-node
  template:
    metadata:
      labels:
        app: kube-node
    spec:
      volumes: # Define volume
        - name: shared-text
          # emptyDir: {}
          persistentVolumeClaim:
            claimName: logs-claim
      containers:
        - name: kube-node
          image: aventusm/kube-node-project
          volumeMounts: # Mount volume
            - name: shared-text
              mountPath: /public
