Part1/project/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-node-service
spec:
  type: ClusterIP
  selector:
    app: kube-node
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3001
