Part1/project/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-node-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: kube-node-service
          servicePort: 2345
